--- a/COSIMA_CookBook_ACCESS-OM2.ipynb
+++ b/COSIMA_CookBook_ACCESS-OM2.ipynb
@@ -705,9 +705,9 @@
     "| tx_trans_int_z | (time, Y, X) | T-cell i-mass transport vertically summed |\n",
     "| ty_trans_int_z | (time, Y, X) | T-cell j-mass transport vertically summed |\n",
     "|\n",
-    "|hi_m | (time, nj, ni) | grid cell mean ice thickness |\n",
-    "| hs_m | (time, nj, ni)  | grid cell mean snow thickness|\n",
-    "| aice_m | (time, nj, ni) |ice area  (aggregate) |\n",
+    "| hi_m | (time, Y, X) | grid cell mean ice thickness |\n",
+    "| hs_m | (time, Y, X)  | grid cell mean snow thickness|\n",
+    "| aice_m | (time, Y, X) |ice area  (aggregate) |\n",
     "|\n",
     "| temp | (time, Z, Y, X) | Conservative temperature | \n",
     "| salt | (time, Z, Y, X) | Practical Salinity |\n",
@@ -722,7 +722,17 @@
     "| ty_trans_rho | (time, rho, Y, X) | T-cell j-mass transport on pot_rho |\n",
     "| ty_trans_rho_gm | (time, rho, Y, X) | T-cell j-mass transport from GM on pot_rho | \n",
     "| temp_xflux_adv | (time, Z, Y, X) | cp.rho.dzt.dyt.u.temp |\n",
-    "| temp_yflux_adv | (time, Z, Y, X) | cp.rho.dzt.dxt.v.temp |"
+    "| temp_yflux_adv | (time, Z, Y, X) | cp.rho.dzt.dxt.v.temp |\n",
+    "\n",
+    "### 4.3 Have a go yourself\n",
+    "Now it's time for you to learn how to plot some output from these experiments. My suggestion is that you start slowly:\n",
+    " * Plot a timeseries of your choice from each of the 3 experiments, on the same axes;\n",
+    " * Plot time-mean 2D variable;\n",
+    " * Plot the difference between two fields from different experiments;\n",
+    " * Show that the wind stress in the perturbation cases is different to the wind stress in the reference case.\n",
+    " \n",
+    "### 4.4 Now that you know how to plot things ...\n",
+    "Think of what you would like to investigate in these runs. Discuss with your group as to what you might be able to learn, and how you would do the analysis. Then, make a few plots for me. Try to make it stylish, choose a good colour scale. Then, be ready to show your plot to the whole group and to explain what it means..."
    ]
   },
   {
