--- a/COSIMA_CookBook_ACCESS-OM2.ipynb
+++ b/COSIMA_CookBook_ACCESS-OM2.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,10 @@
     " * Show that the wind stress in one of the perturbation cases is different to the wind stress in the reference case.\n",
     " \n",
     "### 4.4 Now that you know how to plot things ...\n",
-    "Think of something you would like to investigate in these runs. Discuss with your group as to what you might be able to learn, and how you would do the analysis. Then, make a few plots for me. Try to make it stylish, choose a good colour scale. Then, be ready to show your plot to the whole group and to explain what it means..."
+    "Think of something you would like to investigate in these runs. Discuss with your group as to what you might be able to learn, and how you would do the analysis. Then, make a few plots for me. Try to make it stylish, choose a good colour scale and ...\n",
+    "\n",
+    "### 4.5 Be Ready to show your plot\n",
+    "At the end of the session, we will spend half an hour looking at some of the plots you have produced, and outlining what you have learnt from these simulations."
    ]
   },
   {
